<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.ListSongsActivity" >

    <EditText
        android:id="@+id/searchSong"
        android:layout_width="350dp"
        android:inputType="text"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/searchArtist"
        android:textSize="20sp"
        android:textColorHint="#fff"
        android:background="@color/colorPrimaryDark"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/search2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:text="@string/search2"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/download"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="75dp"
        android:layout_toRightOf="@+id/search2"
        android:background="@color/colorPrimaryDark"
        android:text="@string/search3"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/listOfSongs"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_marginTop="140dp"
        android:text="List Of Songs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/listedSongs"
        android:layout_marginTop="180dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
